# mazecaster

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.bak  README.md  raycast
include/: game.h  graph.h  inputs.h  linkedlist.h  map.h  player.h  raycaster.h  renderer.h  stack.h  state.h  types.h  utils.h  window.h
src/: game.c  graph.c  inputs.c  linkedlist.c  main.c  map.c  player.c  raycaster.c  renderer.c  stack.c  state.c  utils.c  window.c
